--- a/package.json
+++ b/package.json
@@ -42,5 +42,10 @@
   "devDependencies": {
     "cross-env": "^7.0.3",
     "nodemon": "^2.0.6"
-  }
+  },
+  "browserslist": [
+    "last 1 version",
+    "> 1%",
+    "IE 10"
+  ]
 }
