--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev:server": "nodemon babel-node init.js",
-    "dev:assets": "cross-env WEBPACK_ENV=development webpack",
-    "build:assets": "cross-env WEBPACK_ENV=production webpack"
+    "dev:server": "nodemon babel-node src/init.js",
+    "dev:assets": "cd src && cross-env WEBPACK_ENV=development webpack",
+    "build:assets": "cd src && cross-env WEBPACK_ENV=production webpack"
   },
   "repository": {
     "type": "git",
@@ -34,6 +34,7 @@
     "morgan": "^1.10.0",
     "postcss": "^8.1.10",
     "postcss-loader": "^4.1.0",
+    "pug": "^3.0.0",
     "sass": "^1.29.0",
     "sass-loader": "^10.1.0",
     "webpack": "^5.9.0",
