--- a/package.json
+++ b/package.json
@@ -25,19 +25,20 @@
     "@babel/node": "^7.12.6",
     "@babel/preset-env": "^7.12.7",
     "autoprefixer": "^10.0.4",
+    "babel-loader": "^8.2.2",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
     "css-loader": "^5.0.1",
     "express": "^4.17.1",
     "helmet": "^4.2.0",
-    "mini-css-extract-plugin": "^1.3.1",
+    "mini-css-extract-plugin": "^1.3.2",
     "morgan": "^1.10.0",
     "postcss": "^8.1.10",
     "postcss-loader": "^4.1.0",
     "pug": "^3.0.0",
     "sass": "^1.29.0",
     "sass-loader": "^10.1.0",
-    "webpack": "^5.9.0",
+    "webpack": "^5.10.0",
     "webpack-cli": "^4.2.0"
   },
   "devDependencies": {
