--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "cookie-parser": "^1.4.5",
     "css-loader": "^5.0.1",
     "express": "^4.17.1",
+    "file-loader": "^6.2.0",
     "helmet": "^4.2.0",
     "mini-css-extract-plugin": "^1.3.2",
     "morgan": "^1.10.0",
