--- a/package.json
+++ b/package.json
@@ -29,10 +29,12 @@
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
     "css-loader": "^5.0.1",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "file-loader": "^6.2.0",
     "helmet": "^4.2.0",
     "mini-css-extract-plugin": "^1.3.2",
+    "mongoose": "^5.11.6",
     "morgan": "^1.10.0",
     "postcss": "^8.1.10",
     "postcss-loader": "^4.1.0",
