--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "mini-css-extract-plugin": "^1.3.2",
     "mongoose": "^5.11.6",
     "morgan": "^1.10.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^6.0.1",
     "postcss": "^8.1.10",
     "postcss-loader": "^4.1.0",
     "pug": "^3.0.0",
