--- a/package.json
+++ b/package.json
@@ -31,11 +31,13 @@
     "css-loader": "^5.0.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-sesssion": "^1.15.5",
     "file-loader": "^6.2.0",
     "helmet": "^4.2.0",
     "mini-css-extract-plugin": "^1.3.2",
     "mongoose": "^5.11.6",
     "morgan": "^1.10.0",
+    "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^6.0.1",
     "postcss": "^8.1.10",
