--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "greenday",
+  "name": "planet",
   "version": "1.0.0",
   "description": "Develop to do list site with Vanilla and NodeJS",
   "main": "index.js",
@@ -17,20 +17,21 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/minji9360/greenday.git"
+    "url": "git+https://github.com/minji9360/Planet.git"
   },
   "author": "Minji Kim",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/minji9360/greenday/issues"
+    "url": "https://github.com/minji9360/Planet/issues"
   },
-  "homepage": "https://github.com/minji9360/greenday#readme",
+  "homepage": "https://github.com/minji9360/Planet#readme",
   "dependencies": {
+    "@babel/cli": "^7.12.10",
     "@babel/core": "^7.12.10",
-    "@babel/node": "^7.12.6",
-    "@babel/polyfill": "^7.12.1",
+    "@babel/node": "^7.12.10",
+    "@babel/polyfill": "^7.0.0",
     "@babel/preset-env": "^7.12.11",
-    "autoprefixer": "^10.0.4",
+    "autoprefixer": "^10.1.0",
     "babel-loader": "^8.2.2",
     "body-parser": "^1.19.0",
     "connect-mongo": "^3.2.0",
@@ -41,22 +42,21 @@
     "express-sesssion": "^1.15.5",
     "file-loader": "^6.2.0",
     "helmet": "^4.2.0",
-    "mini-css-extract-plugin": "^1.3.2",
+    "mini-css-extract-plugin": "^1.3.3",
     "mongoose": "^5.11.8",
     "morgan": "^1.10.0",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^6.0.1",
-    "postcss": "^8.1.10",
+    "postcss": "^8.2.1",
     "postcss-loader": "^4.1.0",
     "pug": "^3.0.0",
-    "sass": "^1.29.0",
+    "sass": "^1.30.0",
     "sass-loader": "^10.1.0",
-    "webpack": "^5.10.0",
+    "webpack": "^5.11.0",
     "webpack-cli": "^4.2.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.0.0",
     "cross-env": "^7.0.3",
     "nodemon": "^2.0.6"
   },
